# CloudFlareScan

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = ["CloudFlareScan"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
